# aegisai-enterprise-agent-platform

./: .dockerignore  .env.example  .gitignore  .vpeetla-skills.json  Makefile  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  orchestrator-cron.yml
adr/: 0001-control-plane-boundary.md  0002-supervised-multi-agent-orchestration.md  0003-orchestrator-auth-gate.md  0004-real-finops-metering-website-build.md  0005-mcp-tool-exposure.md  0006-paas-vs-iac-deploy-tradeoffs.md
apps/web/: .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vercel.json
docs/: ECOSYSTEM.md  PRODUCT.md  SLO.md
docs/diagrams/: canonical-architecture.mmd
orchestrators/ai_content_pipeline/: orchestrator.py
orchestrators/stock_research/: orchestrator.py
platform/architecture/: DEPLOYMENT-AND-SECRETS.md  architecture.md  business-rules.md  e2e-product-blueprint.md  enterprise-ai-production-architecture.md  frontend-architecture.md  llm-langgraph-rag-api.md  multi-agent-architecture.md  portfolio-case-study.md  principal-product-owner-review.md  tradeoffs.md
platform/database/: data-model.md  db-schema.sql  postgres-migration.sql
platform/deployment/: aws-deployment-strategy.md  aws-e2e-deployment-runbook.md  low-cost-deployment-runbook.md  postgres-production-setup.md
platform/operations/: gateway-enforcement-and-metrics.md  http-connector-registration.md  observability-integrations.md  operations.md  (+3 more)
scripts/: dev.sh  start-api.sh  start-web.sh  verify.sh
startup-playbook/: README.md
(+188 files in other folders)
